[features-js] filtration on mobile devices / bugs fixed / code optimisation

--- a/#source/style.scss
+++ b/#source/style.scss
@@ -340,7 +340,7 @@ input::-webkit-inner-spin-button {
     justify-content: center;
 }
 .pagination-container_margin-top {
-    margin: 10px 0 0 0;
+    margin: 10px 0 10px 0;
 }
 
 .pagination-number,
@@ -377,7 +377,6 @@ input::-webkit-inner-spin-button {
     .cards-wrapper {
         grid-template-columns: repeat(auto-fit, minmax(215px, 1fr));
         row-gap: 20px;
-        //justify-items: center;
     }
 }
 
@@ -386,7 +385,6 @@ input::-webkit-inner-spin-button {
         display: none;
     }
     .main{
-        //border: 1px solid black;
         display: inline-block;
         margin: 80px 0 0 0;
     }
@@ -395,7 +393,6 @@ input::-webkit-inner-spin-button {
     }
     .cards-wrapper{
         width: 100%;
-        //border: 1px solid red;
     }
 
     .header{
@@ -459,12 +456,14 @@ input::-webkit-inner-spin-button {
         bottom: 0;
     }
 
-    .menu__body{
+    .sidebar{
+        display: block;
         position: fixed;
+        margin: 0;
         z-index: 5000;
         background: rgb(214, 149, 188);
         top: 0;
-        left: -100%;
+        left: -150%;
         width: 100%;
         height: 100%;
         transition: all 0.3s;
@@ -472,7 +471,7 @@ input::-webkit-inner-spin-button {
             top: 87%;
         }
     }
-    .menu__body.show{
+    .sidebar.show{
         left: 0;
     }
 }
